kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: shoe-app-service
  namespace: shoe-app-ns
spec:
  selector:
    app: shoe-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
